--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     // https://mvnrepository.com/artifact/com.github.samtools/htsjdk
     extraLibs group: 'com.github.samtools', name: 'htsjdk', version: '2.19.0'
 
+    // https://mvnrepository.com/artifact/com.shazam/shazamcrest
+    testCompile group: 'com.shazam', name: 'shazamcrest', version: '0.11'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.0'
 
