--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
-
     // https://mvnrepository.com/artifact/commons-io/commons-io
     extraLibs group: 'commons-io', name: 'commons-io', version: '2.4'
-    // https://mvnrepository.com/artifact/org.json/json
-    compile group: 'org.json', name: 'json', version: '20180813'
     extraLibs group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
     extraLibs group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
@@ -37,7 +34,6 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
     extraLibs group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
 
-
     // https://mvnrepository.com/artifact/com.github.samtools/htsjdk
     extraLibs group: 'com.github.samtools', name: 'htsjdk', version: '2.19.0'
 
@@ -46,8 +42,6 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.0'
-
-
 
     configurations.compile.extendsFrom(configurations.extraLibs)
 }
@@ -61,6 +55,16 @@ jar {
         configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
+
+//jar {
+//    archiveName = 'chromosomeSplitter.jar'
+//    manifest {
+//        attributes 'Main-Class':'org.molgenis.chromosomeSplitter.Main'
+//    }
+//    from {
+//        configurations.extraLibs.collect { it.isDirectory() ? it :zipTree(it) }
+//    }
+//}
 
 test {
     useJUnitPlatform()
